[workspace]
members = ["src/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["JADSN1894 <120682244+JADSN1894@users.noreply.github.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"

[workspace.dependencies]
wasm-bindgen = { version = "0.2.92" }
