[workspace]
members = ["sri"]
default-members = ["sri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["JADSN1894 <120682244+JADSN1894@users.noreply.github.com>"]

[workspace.dependencies]
base64 = "0.22.0"
sha-1 = "0.10.1"
sha2 = "0.10.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
